<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="slogan1">The path to get your dream job</string>
    <string name="slogan2">You can do it</string>
    <string name="companyName" translatable="false">Udacity</string>
    <string name="companyAddress">2465 Latham St\nMountain View, CA 94043</string>
    <string name="companyPhone">650–555–5555</string>
    <string name="companyWebsite">https://www.udacity.com/</string>
    <string name="backgroundDescription">Background image</string>
    <string name="udacityLogoDescription">Udacity logo</string>
</resources>
